syntax = "proto3";
message Empty {}
//message for updating balance of user
message UpdateBalanceRequest {
  string user_id = 1;
  float amount = 2;
}
message userDetailsRequest {
  string user_id = 1;
}
message LockBalanceRequest {
  int64 user_id = 1;
  float amount = 2;
  int64 tableId = 3;
  string gameType = 4;
}


message DeductBalanceRequest {
  int64 user_id = 1;
  float deductBalance = 2;
  int64 tableId = 3;
  float lockAmount = 4;
}

message AddPrizeMoneyRequest {
  int64 user_id = 1;
  float prizeMoney = 2;
  int64 tableId = 3;
}

message TopUpBalanceRequest {
  int64 user_id = 1;
  float prev_amount = 2;
  int64 tableId = 3;
  float top_up_amount = 4;
  string gameType = 5;
}

// message for response of userDetails 
//new added
message details {
  string username = 1;
  string profile_image = 2;
  float real_amount = 3;
  float practice_amount = 4;
  float bonus_amount = 5;
  int32 coins = 6;
  float win_amount = 7;
  bool status = 8;
  string message = 9;
   float otp_amount = 10;
   float locked_amount=11;
}

//message bonus percentage
message bonusResponse {
  string bonus_percentage = 1;
}

//Add Winning Amount
message addWinBalanceRequest {
  int64 user_id = 1;
  float realAmount = 2;
  float winningAmount = 3;
  string tableId = 4;
  float winTransaction = 5;
  float adminCommision = 6;
  float betAmount = 7;
  int64 success=8;
  float newLockedAmount=9;
  float remainingAmount =10;
}

//message for boolean response to balance update
message GenericResponse {
  bool status = 1;
  string message = 2;
  string data = 3;
}

message UserNameByUserIdRequest {
  int64 user_id = 1;
}

message UserNameByUserIdResponse {
  string username = 1;
}

//service for balance update of user
service BalanceUpdateService {
  rpc UpdateBalance(UpdateBalanceRequest) returns (GenericResponse) {}
}

//service for locking balance of user
service LockBalanceService {
  rpc LockBalance(LockBalanceRequest) returns (GenericResponse) {}
  rpc UnlockBalance(LockBalanceRequest) returns (GenericResponse) {}
  rpc UpdateLockBalance(LockBalanceRequest) returns (GenericResponse) {}
  rpc TopUpBalance(TopUpBalanceRequest) returns (GenericResponse) {}
  rpc DeductJoinFees(DeductBalanceRequest) returns (GenericResponse) {}
  rpc AddPrizeMoney(AddPrizeMoneyRequest) returns (GenericResponse) {}
}
// service for getting user details
service getUserDetailsService {
  rpc GetUserDetails(userDetailsRequest) returns (details){}
  rpc userBonusPercentage(Empty) returns (bonusResponse){}
  rpc deductJoinFeesForLudo(DeductBalanceRequest) returns (GenericResponse) {}
  rpc addWinningAmountForLudo(addWinBalanceRequest) returns (GenericResponse) {}
  rpc getUserNameByUserId(UserNameByUserIdRequest) returns (UserNameByUserIdResponse){}
  rpc deductJoinFeesForRummy(DeductBalanceRequest) returns (GenericResponse) {}
  rpc addWinningAmountForRummy(addWinBalanceRequest) returns (GenericResponse) {}
}
